--- a/index.html
+++ b/index.html
@@ -1,7 +1,118 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>風</title>
+<style>
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+	font-size: 16em;
+	text-align: center;
+	margin: 0;
+}
+h2 {
+	font-size: 2em;
+	text-align: center;
+	font-family: "Lucida Console", Monaco, monospace;
+}
+table {
+	font-size: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: 'Courier New', Courier, monospace;
+}
+th {
+	text-align: right;
+	padding-right: 1em;
+	width: 35em;
+}
+td {
+	text-align: left;
+	padding-left: 1em;
+	width: 35em;
+}
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>風</h1>
+<h2>Hardware &amp; Network</h2>
+<div>
+	<span>
+		<table>
+			<tr>
+				<th>Motherboard</th>
+				<td>Asus Z390-F</td>
+			</tr>
+			<tr>
+				<th>CPU</th>
+				<td>Intel Core i7-9700K, 8-Cores 4.7 GHz</td>
+			</tr>
+			<tr>
+				<th>Memory</th>
+				<td>G.Skill Trident Z, DDR4 3600MHz<br>CL15-15-15-35 1.375V 16GB</td>
+			</tr>
+			<tr>
+				<th>Storage</th>
+				<td>Samsung 970 PRO, NVMe M.2 SSD 1TB</td>
+			</tr>
+			<tr>
+				<th>PSU</th>
+				<td>Be Quiet! Dark Power Pro 11, 550W</td>
+			</tr>
+			<tr>
+				<th>Chassi</th>
+				<td>Fractal Design Define C</td>
+			</tr>
+			<tr>
+				<th>Cooling</th>
+				<td>Be Quiet! Dark Rock Pro 4</td>
+			</tr>
+			<tr>
+				<th></th>
+				<td>Be Quiet! Silent Wings 3 PWM 140mm (4x)</td>
+			</tr>
+			<tr>
+				<th></th>
+				<td>Be Quiet! Silent Wings 3 PWM 120mm (2x)</td>
+			</tr>
+			<tr>
+				<th></th>
+				<td>Noctua NF-A4x20 PWM 40mm</td>
+			</tr>
+			<tr>
+				<th>UPS</th>
+				<td>PowerWalker Basic VI 1000 SB, 600W 1000VA</td>
+			</tr>
+			<tr>
+				<th>Router</th>
+				<td>Ubiquiti Networks EdgeRouter X 100Mbit/s</td>
+			</tr>
+			<tr>
+				<th>ISP Location</th>
+				<td>Stockholm, Sweden</td>
+			</tr>
+		</table>
+	</span>
+</div>
+<h2>Software</h2>
+<div>
+	<span>
+		<table>
+			<tr>
+				<th>Operating System</th>
+				<td>Windows 10 WSL (Ubuntu 18.04 LTS)</td>
+			</tr>
+			<tr>
+				<th>Node Manager</th>
+				<td><a href="https://bluecheesestakehouse.com">JorManager</a></td>
+			</tr>
+			<tr>
+				<th>Storage Booster</th>
+				<td>RAMCache III</td>
+			</tr>
+		</table>
+	</span>
+</div>
 </body>
 </html>
