--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ td {
 </head>
 <body>
 <h1>風</h1>
+<h2 style="color:maroon;">Disclaimer: This Staking Pool is currently offline!</h2>
+<h2 style="color: darkseagreen;">Estimated to be operational on the 14th of February.</h2>
 <h2>Hardware &amp; Network</h2>
 <div>
 	<span>
