Changed date, added new parts

--- a/index.html
+++ b/index.html
@@ -83,16 +83,24 @@ td {
 				<td>Noctua NF-A4x20 PWM 40mm</td>
 			</tr>
 			<tr>
-				<th>UPS</th>
-				<td>PowerWalker Basic VI 1000 SB, 600W 1000VA</td>
+				<th>NIC</th>
+				<td>Mellanox ConnectX-4 MCX4121A-XCAT</td>
 			</tr>
 			<tr>
 				<th>Router</th>
-				<td>Ubiquiti Networks EdgeRouter X 100Mbit/s</td>
+				<td>Ubiquiti Networks EdgeRouter 4</td>
+			</tr>
+			<tr>
+				<th>Broadband</th>
+				<td>1 Gbit/s</td>
 			</tr>
 			<tr>
 				<th>ISP Location</th>
 				<td>Stockholm, Sweden</td>
+			</tr>
+			<tr>
+				<th>UPS</th>
+				<td>PowerWalker Basic VI 1000 SB, 600W 1000VA</td>
 			</tr>
 		</table>
 	</span>
