--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ td {
 		<table>
 			<tr>
 				<th>Operating System</th>
-				<td>Windows 10 WSL (Ubuntu 18.04 LTS)</td>
+				<td>Windows 10 Hyper-V (Ubuntu 18.04 LTS)</td>
 			</tr>
 			<tr>
 				<th>Node Manager</th>
