--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>風</title>
+<title>K₳ZE</title>
 <style>
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -46,7 +46,7 @@ td {
 			</tr>
 			<tr>
 				<th>CPU</th>
-				<td>Intel Core i7-9700K, 8-Cores 4.7 GHz</td>
+				<td>Intel Core i7-9700K, 8-Cores @ 4.5 GHz</td>
 			</tr>
 			<tr>
 				<th>Memory</th>
@@ -75,10 +75,6 @@ td {
 			<tr>
 				<th>Chassi</th>
 				<td>Fractal Design Define C</td>
-			</tr>
-			<tr>
-				<th>NIC</th>
-				<td>Mellanox ConnectX-4 MCX4121A-XCAT</td>
 			</tr>
 			<tr>
 				<th>Router</th>
