--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@ td {
 				<td>Asus Z390-F</td>
 			</tr>
 			<tr>
-				<th>CPU</th>
-				<td>Intel Core i7-9700K, 8-Cores @ 4.5 GHz</td>
+				<th>Processor</th>
+				<td>Intel Core i7-9700K, 8-Cores, Base Frequency OC @ 4.5 GHz</td>
 			</tr>
 			<tr>
 				<th>Memory</th>
-				<td>G.Skill Trident Z, DDR4 3600MHz<br>CL15-15-15-35 1.35V 16GB</td>
+				<td>G.Skill Trident Z, DDR4 3600MHz, CL15-15-15-35 1.35V 16GB</td>
 			</tr>
 			<tr>
 				<th>Storage</th>
-				<td>Samsung 970 PRO, NVMe M.2 SSD 1TB</td>
+				<td>Samsung 970 PRO, NVMe M.2 SSD 1TB (20/1200 TBW)</td>
 			</tr>
 			<tr>
-				<th>PSU</th>
+				<th>Power Supply</th>
 				<td>Be Quiet! Dark Power Pro 11, 550W</td>
 			</tr>
 			<tr>
-				<th>Cooling</th>
+				<th>Air Cooling</th>
 				<td>Be Quiet! Dark Rock Pro 4</td>
 			</tr>
 			<tr>
@@ -77,20 +77,28 @@ td {
 				<td>Fractal Design Define C</td>
 			</tr>
 			<tr>
-				<th>Router</th>
+				<th>Uninterruptible Power Supply</th>
+				<td>PowerWalker Basic VI 1000 SB, 600W 1000VA</td>
+			</tr>
+			<tr>
+				<th>Network Interface Card</th>
+				<td>Mellanox ConnectX-4 MCX4121A-XCAT</td>
+			</tr>
+			<tr>
+				<th>Network Router</th>
 				<td>Ubiquiti Networks EdgeRouter 4</td>
 			</tr>
 			<tr>
-				<th>Broadband</th>
+				<th>Broadband Speed</th>
 				<td>1 Gbit/s</td>
 			</tr>
 			<tr>
-				<th>ISP Location</th>
-				<td>Stockholm, Sweden</td>
+				<th>Internet Service Provider</th>
+				<td>Bahnhof</td>
 			</tr>
 			<tr>
-				<th>UPS</th>
-				<td>PowerWalker Basic VI 1000 SB, 600W 1000VA</td>
+				<th>IP Location</th>
+				<td>Stockholm, Sweden</td>
 			</tr>
 		</table>
 	</span>
