--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@ td {
 				<td>Windows 10 Hyper-V (Ubuntu 18.04 LTS)</td>
 			</tr>
 			<tr>
+				<th>Jörmungandr Version</th>
+				<td>0.8.10</td>
+			</tr>
+			<tr>
 				<th>Node Manager</th>
 				<td><a href="https://bluecheesestakehouse.com">JorManager</a></td>
 			</tr>
