--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <style>
 body {
 	font-family: Arial, Helvetica, sans-serif;
+	background-color: #000;
+	color: #FFF;
 }
 h1 {
 	font-size: 16em;
@@ -15,6 +17,10 @@ h2 {
 	font-size: 2em;
 	text-align: center;
 	font-family: "Lucida Console", Monaco, monospace;
+}
+a, a:link, a:visited, a:active {
+	color: #39FF14;
+	text-decoration: none;
 }
 table {
 	font-size: 1em;
