Updated Jörmungandr version

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ td {
 			</tr>
 			<tr>
 				<th>Jörmungandr Version</th>
-				<td>0.8.10</td>
+				<td>0.8.9-alpha6</td>
 			</tr>
 			<tr>
 				<th>Node Manager</th>
