--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@ td {
 			</tr>
 			<tr>
 				<th>Internet Service Provider</th>
-				<td>Bahnhof</td>
+				<td>Bahnhof AB</td>
 			</tr>
 			<tr>
-				<th>IP Location</th>
-				<td>Stockholm, Sweden</td>
+				<th>Location</th>
+				<td>Sweden</td>
 			</tr>
 		</table>
 	</span>
