--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <title>K₳ZE</title>
 <style>
 body {
-	font-family: Arial, Helvetica, sans-serif;
-	background-color: #000;
-	color: #FFF;
+	background-color:  #101721;
+	color: #f5f7fA;
 }
 h1 {
 	font-size: 16em;
@@ -16,10 +15,10 @@ h1 {
 h2 {
 	font-size: 2em;
 	text-align: center;
-	font-family: "Lucida Console", Monaco, monospace;
+	font-family: monospace;
 }
 a, a:link, a:visited, a:active {
-	color: #39FF14;
+	color: #4fc1e9;
 	text-decoration: none;
 }
 table {
@@ -123,7 +122,7 @@ td {
 			</tr>
 			<tr>
 				<th>Node Manager</th>
-				<td><a href="https://bluecheesestakehouse.com">JorManager</a></td>
+				<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager</a> (5 nodes)</td>
 			</tr>
 		</table>
 	</span>
