Updated CPU freq

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ td {
 			</tr>
 			<tr>
 				<th>Processor</th>
-				<td>Intel Core i7-9700K, 8-Cores, Base Frequency OC @ 4.5 GHz</td>
+				<td>Intel Core i7-9700K, 8-Cores 3.6 GHz</td>
 			</tr>
 			<tr>
 				<th>Memory</th>
