Removed commas, added links

--- a/index.html
+++ b/index.html
@@ -48,51 +48,51 @@ td {
 		<table>
 			<tr>
 				<th>Motherboard</th>
-				<td>Asus Z390-F</td>
+				<td><a href="https://www.asus.com/us/Motherboards/ROG-STRIX-Z390-F-GAMING/specifications/">ASUS ROG STRIX Z390-F GAMING</a></td>
 			</tr>
 			<tr>
 				<th>Processor</th>
-				<td>Intel Core i7-9700K, 8-Cores 3.6 GHz</td>
+				<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6 GHz</a></td>
 			</tr>
 			<tr>
 				<th>Memory</th>
-				<td>G.Skill Trident Z, DDR4 3600MHz, CL15-15-15-35 1.35V 16GB</td>
+				<td><a href="https://www.gskill.com/specification/165/168/1536202856/F4-3600C15D-16GTZ-Specification">G.Skill Trident Z DDR4 3600MHz CL15-15-15-35 1.35V 16GB</a></td>
 			</tr>
 			<tr>
 				<th>Storage</th>
-				<td>Samsung 970 PRO, NVMe M.2 SSD 1TB (20/1200 TBW)</td>
+				<td><a href="https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/970pro/#ge_semi_anchor_stand2">Samsung 970 PRO NVMe M.2 SSD 1TB (20/1200 TBW)</a></td>
 			</tr>
 			<tr>
 				<th>Power Supply</th>
-				<td>Be Quiet! Dark Power Pro 11, 550W</td>
+				<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
 			</tr>
 			<tr>
 				<th>Air Cooling</th>
-				<td>Be Quiet! Dark Rock Pro 4</td>
+				<td><a href="https://www.bequiet.com/en/cpucooler/1378#technische-daten">Be Quiet! Dark Rock Pro 4</a></td>
 			</tr>
 			<tr>
 				<th></th>
-				<td>Be Quiet! Silent Wings 3 PWM 140mm (4x)</td>
+				<td><a href="https://www.bequiet.com/en/casefans/717">Be Quiet! Silent Wings 3 PWM 140mm (4x)</a></td>
 			</tr>
 			<tr>
 				<th></th>
-				<td>Be Quiet! Silent Wings 3 PWM 120mm (2x)</td>
+				<td><a href="https://www.bequiet.com/en/casefans/718">Be Quiet! Silent Wings 3 PWM 120mm (2x)</a></td>
 			</tr>
 			<tr>
 				<th>Chassi</th>
-				<td>Fractal Design Define C</td>
+				<td><a href="https://www.fractal-design.com/products/cases/define/define-c/black/#specifications">Fractal Design Define C</a></td>
 			</tr>
 			<tr>
 				<th>Uninterruptible Power Supply</th>
-				<td>PowerWalker Basic VI 1000 SB, 600W 1000VA</td>
+				<td><a href="https://powerwalker.com/?page=product&item=10121068">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
 			</tr>
 			<tr>
 				<th>Network Interface Card</th>
-				<td>Mellanox ConnectX-4 MCX4121A-XCAT</td>
+				<td><a href="https://store.mellanox.com/products/mellanox-mcx4121a-xcat-connectx-4-lx-en-network-interface-card-10gbe-dual-port-sfp28-pcie3-0-x8-rohs-r6.html">Mellanox ConnectX-4 MCX4121A-XCAT</a></td>
 			</tr>
 			<tr>
 				<th>Network Router</th>
-				<td>Ubiquiti Networks EdgeRouter 4</td>
+				<td><a href="https://www.ui.com/edgemax/edgerouter-4/">Ubiquiti Networks EdgeRouter 4</a></td>
 			</tr>
 			<tr>
 				<th>Broadband Speed</th>
@@ -119,11 +119,11 @@ td {
 			</tr>
 			<tr>
 				<th>Jörmungandr Version</th>
-				<td>0.8.11</td>
+				<td>0.8.9-stable-alpha6</td>
 			</tr>
 			<tr>
 				<th>Node Manager</th>
-				<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager</a> (5 nodes)</td>
+				<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.2.1</a> (5 nodes)</td>
 			</tr>
 		</table>
 	</span>
