--- a/index.html
+++ b/index.html
@@ -128,6 +128,44 @@ td {
 		</table>
 	</span>
 </div>
-<h2>Epoch 72: 3/3 blocks so far! シ</h2>
+<div>
+	<span>
+		<table>
+			<tr>
+				<th><h2>Epoch 66<h2></th>
+				<td><h2>0 blocks</h2></td>
+			</tr>
+			<tr>
+				<th><h2>Epoch 67<h2></th>
+				<td><h2>1/1 block! シ</h2></td>
+			</tr>
+			<tr>
+				<th><h2>Epoch 68<h2></th>
+				<td><h2>0 blocks</h2></td>
+			</tr>
+			<tr>
+				<th><h2>Epoch 69<h2></th>
+				<td><h2>0 blocks</h2></td>
+			</tr>
+			<tr>
+				<th><h2>Epoch 70</h2></th>
+				<td><h2>1/1 block! シ</h2></td>
+			</tr>
+			<tr>
+				<th><h2>Epoch 71</h2></th>
+				<td><h2>0/0 block</h2></td>
+			</tr>
+			<tr>
+				<th><h2>Epoch 72</h2></th>
+				<td><h2>1/1 block! シ</h2></td>
+			</tr>
+		</table>
+	</span>
+</div>
+<h2></h2>
+<h2>Epoch 68: 0/0 blocks</h2>
+<h2>Epoch 69: 0/0 blocks</h2>
+<h2>Epoch 70: 1/1 block! シ</h2>
+<h2>Epoch 72: 1/1 block! シ</h2>
 </body>
 </html>
