Updated status styling

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ td {
 	padding-left: 1em;
 	width: 35em;
 }
+#statistics-table {
+	line-height: 2em;
+}
 </style>
 </head>
 <body>
@@ -128,36 +131,37 @@ td {
 		</table>
 	</span>
 </div>
+<h2>Statistics</h2>
 <div>
 	<span>
-		<table>
+		<table id="statistics-table">
 			<tr>
-				<th><h2>Epoch 66<h2></th>
-				<td><h2>0 blocks</h2></td>
+				<th>Epoch 66</th>
+				<td>0 blocks</h2></td>
 			</tr>
 			<tr>
-				<th><h2>Epoch 67<h2></th>
-				<td><h2>1/1 block! シ</h2></td>
+				<th>Epoch 67</th>
+				<td>1/1 block! シ</h2></td>
 			</tr>
 			<tr>
-				<th><h2>Epoch 68<h2></th>
-				<td><h2>0 blocks</h2></td>
+				<th>Epoch 68</th>
+				<td>0 blocks</h2></td>
 			</tr>
 			<tr>
-				<th><h2>Epoch 69<h2></th>
-				<td><h2>0 blocks</h2></td>
+				<th>Epoch 69</th>
+				<td>0 blocks</h2></td>
 			</tr>
 			<tr>
-				<th><h2>Epoch 70</h2></th>
-				<td><h2>1/1 block! シ</h2></td>
+				<th>Epoch 70</h2></th>
+				<td>1/1 block! シ</h2></td>
 			</tr>
 			<tr>
-				<th><h2>Epoch 71</h2></th>
-				<td><h2>0/0 block</h2></td>
+				<th>Epoch 71</h2></th>
+				<td>0/0 block</h2></td>
 			</tr>
 			<tr>
-				<th><h2>Epoch 72</h2></th>
-				<td><h2>1/1 block! シ</h2></td>
+				<th>Epoch 72</h2></th>
+				<td>1/1 block! シ</h2></td>
 			</tr>
 		</table>
 	</span>
