Updated status, clarification

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ td {
 		<table id="statistics-table">
 			<tr>
 				<th>Epoch 66</th>
-				<td>0 blocks</h2></td>
+				<td>0/0 blocks</h2></td>
 			</tr>
 			<tr>
 				<th>Epoch 67</th>
@@ -145,11 +145,11 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 68</th>
-				<td>0 blocks</h2></td>
+				<td>0/0 blocks</h2></td>
 			</tr>
 			<tr>
 				<th>Epoch 69</th>
-				<td>0 blocks</h2></td>
+				<td>0/0 blocks</h2></td>
 			</tr>
 			<tr>
 				<th>Epoch 70</h2></th>
