Updated status, sorry I am tierd..

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 71</h2></th>
-				<td>0/0 block</h2></td>
+				<td>0/0 blocks</h2></td>
 			</tr>
 			<tr>
 				<th>Epoch 72</h2></th>
