Cleanup broken HTML, add estimate for E73

--- a/index.html
+++ b/index.html
@@ -137,31 +137,35 @@ td {
 		<table id="statistics-table">
 			<tr>
 				<th>Epoch 66</th>
-				<td>0/0 blocks</h2></td>
+				<td>0/0 blocks</td>
 			</tr>
 			<tr>
 				<th>Epoch 67</th>
-				<td>1/1 block! シ</h2></td>
+				<td>1/1 block! シ</td>
 			</tr>
 			<tr>
 				<th>Epoch 68</th>
-				<td>0/0 blocks</h2></td>
+				<td>0/0 blocks</td>
 			</tr>
 			<tr>
 				<th>Epoch 69</th>
-				<td>0/0 blocks</h2></td>
+				<td>0/0 blocks</td>
 			</tr>
 			<tr>
 				<th>Epoch 70</h2></th>
 				<td>1/1 block! シ</h2></td>
 			</tr>
 			<tr>
-				<th>Epoch 71</h2></th>
-				<td>0/0 blocks</h2></td>
+				<th>Epoch 71</th>
+				<td>0/0 blocks</td>
 			</tr>
 			<tr>
-				<th>Epoch 72</h2></th>
-				<td>1/1 block! シ</h2></td>
+				<th>Epoch 72</th>
+				<td>1/1 block! シ</td>
+			</tr>
+			<tr>
+				<th>Epoch 73</th>
+				<td>Scheduled for 1 block (out of 3 average, so only 33 % max returns, lets hope for better RNG tomorrow..)</td>
 			</tr>
 		</table>
 	</span>
