--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 73</th>
-				<td>Scheduled for 1 block (out of 3 average, so only 33 % max returns, lets hope for better RNG tomorrow..)</td>
+				<td>Scheduled for 1 block (out of 3 on average).<br>
+					Update: 1/1 block! Thank you, whoever staked 10M with me today! Sorry about the bad dice roll. Let us hope for better RNG next epoch! シ
 			</tr>
 		</table>
 	</span>
