--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 73</th>
-				<td>1/1 block! Thank you, whoever staked 10M! Sorry about the bad dice roll. Let us hope for better RNG next epoch! シ
+				<td>1/1 block! シ
 			</tr>
 			<tr>
 				<th>Epoch 74</th>
