--- a/index.html
+++ b/index.html
@@ -169,7 +169,11 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 74</th>
-				<td>Scheduled for 4 blocks (out of 3 on average).<br>Update: 4/4 blocks! シ</br>We got a competetive block and won!!</td>
+				<td>4/4 blocks! シ<br>1/1 slot battles.</td>
+			</tr>
+			<tr>
+				<th>Epoch 75</th>
+				<td>Scheduled for 4 blocks.</td>
 			</tr>
 		</table>
 	</span>
