--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 74</th>
-				<td>4/4 blocks! シ<br>1/1 slot battles.</td>
+				<td>4/4 blocks! シ<br>Competetive: W-1, L-0</td>
 			</tr>
 			<tr>
 				<th>Epoch 75</th>
-				<td>Scheduled for 4 blocks.</td>
+				<td>Scheduled for 4 blocks (out of 3 on average).</td>
 			</tr>
 		</table>
 	</span>
