--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ td {
 			</tr>
 			<tr>
 				<th>Epoch 75</th>
-				<td>Scheduled for 4 blocks (out of 3 on average).</td>
+				<td>Scheduled for 4 blocks (out of 3 on average).<br>Update: 2/2 blocks so far! シ</td>
 			</tr>
 		</table>
 	</span>
