--- a/index.html
+++ b/index.html
@@ -179,5 +179,6 @@ td {
 		</table>
 	</span>
 </div>
+<h2><a href="https://github.com/Kaze-Stake/kaze-stake.github.io/commits/master">History</a></h2>
 </body>
 </html>
