--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ td {
 			</tr>
 			<tr>
 				<th>Backup Node</th>
-				<td><a href="https://rockpi.org/rockpi4">Rock Pi 4B 4GB RAM</a>, <a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">240 GB NVMe SSD</a>, <a href="https://www.ui.com/edgemax/edgerouter-x/">EdgeRouter X</a><br>(At a secondary location, but not yet automated.)</td>
+				<td><a href="https://rockpi.org/rockpi4">Rock Pi 4B 4GB</a>, <a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">240GB NVMe SSD</a>, <a href="https://www.ui.com/edgemax/edgerouter-x/">EdgeRouter X</a><br>(At a secondary location, but not yet automated.)</td>
 			</tr>
 		</table>
 	</span>
