--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ td {
 		<table id="statistics-table">
 			<tr>
 				<th>Epoch 75</th>
-				<td>Scheduled for 4 blocks (out of 3 on average).<br>Update: 3/3 blocks so far! シ</td>
+				<td>4/4 blocks! シ</td>
 			</tr>
 			<tr>
 				<th>Epoch 74</th>
