Removed invalid HTML5

--- a/index.html
+++ b/index.html
@@ -47,141 +47,134 @@ td {
 <h1>風</h1>
 <h2>Hardware &amp; Network</h2>
 <div>
-	<span>
-		<table>
-			<tr>
-				<th>Motherboard</th>
-				<td><a href="https://www.asus.com/us/Motherboards/ROG-STRIX-Z390-F-GAMING/specifications/">ASUS ROG STRIX Z390-F GAMING</a></td>
-			</tr>
-			<tr>
-				<th>Processor</th>
-				<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6 GHz</a></td>
-			</tr>
-			<tr>
-				<th>Memory</th>
-				<td><a href="https://www.gskill.com/specification/165/168/1536202856/F4-3600C15D-16GTZ-Specification">G.Skill Trident Z DDR4 3600MHz CL15-15-15-35 1.35V 16GB</a></td>
-			</tr>
-			<tr>
-				<th>Storage</th>
-				<td><a href="https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/970pro/#ge_semi_anchor_stand2">Samsung 970 PRO NVMe M.2 SSD 1TB (20/1200 TBW)</a></td>
-			</tr>
-			<tr>
-				<th>Power Supply</th>
-				<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
-			</tr>
-			<tr>
-				<th>Air Cooling</th>
-				<td><a href="https://www.bequiet.com/en/cpucooler/1378#technische-daten">Be Quiet! Dark Rock Pro 4</a></td>
-			</tr>
-			<tr>
-				<th></th>
-				<td><a href="https://www.bequiet.com/en/casefans/717">Be Quiet! Silent Wings 3 PWM 140mm (4x)</a></td>
-			</tr>
-			<tr>
-				<th></th>
-				<td><a href="https://www.bequiet.com/en/casefans/718">Be Quiet! Silent Wings 3 PWM 120mm (2x)</a></td>
-			</tr>
-			<tr>
-				<th>Chassi</th>
-				<td><a href="https://www.fractal-design.com/products/cases/define/define-c/black/#specifications">Fractal Design Define C</a></td>
-			</tr>
-			<tr>
-				<th>Uninterruptible Power Supply</th>
-				<td><a href="https://powerwalker.com/?page=product&item=10121068">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
-			</tr>
-			<tr>
-				<th>Network Interface Card</th>
-				<td><a href="https://store.mellanox.com/products/mellanox-mcx4121a-xcat-connectx-4-lx-en-network-interface-card-10gbe-dual-port-sfp28-pcie3-0-x8-rohs-r6.html">Mellanox ConnectX-4 MCX4121A-XCAT</a></td>
-			</tr>
-			<tr>
-				<th>Network Router</th>
-				<td><a href="https://www.ui.com/edgemax/edgerouter-4/">Ubiquiti Networks EdgeRouter 4</a></td>
-			</tr>
-			<tr>
-				<th>Broadband Speed</th>
-				<td>1 Gbit/s</td>
-			</tr>
-			<tr>
-				<th>Internet Service Provider</th>
-				<td>Bahnhof AB</td>
-			</tr>
-			<tr>
-				<th>Location</th>
-				<td>Sweden</td>
-			</tr>
-			<tr>
-				<th>Backup Node</th>
-				<td><a href="https://rockpi.org/rockpi4">Rock Pi 4B 4GB</a>, <a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>, <a href="https://www.ui.com/edgemax/edgerouter-x/">EdgeRouter X</a> (at a secondary location, not yet automated)</td>
-			</tr>
-		</table>
-	</span>
+	<table>
+		<tr>
+			<th>Motherboard</th>
+			<td><a href="https://www.asus.com/us/Motherboards/ROG-STRIX-Z390-F-GAMING/specifications/">ASUS ROG STRIX Z390-F GAMING</a></td>
+		</tr>
+		<tr>
+			<th>Processor</th>
+			<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6 GHz</a></td>
+		</tr>
+		<tr>
+			<th>Memory</th>
+			<td><a href="https://www.gskill.com/specification/165/168/1536202856/F4-3600C15D-16GTZ-Specification">G.Skill Trident Z DDR4 3600MHz CL15-15-15-35 1.35V 16GB</a></td>
+		</tr>
+		<tr>
+			<th>Storage</th>
+			<td><a href="https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/970pro/#ge_semi_anchor_stand2">Samsung 970 PRO NVMe M.2 SSD 1TB (20/1200 TBW)</a></td>
+		</tr>
+		<tr>
+			<th>Power Supply</th>
+			<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
+		</tr>
+		<tr>
+			<th>Air Cooling</th>
+			<td><a href="https://www.bequiet.com/en/cpucooler/1378#technische-daten">Be Quiet! Dark Rock Pro 4</a></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td><a href="https://www.bequiet.com/en/casefans/717">Be Quiet! Silent Wings 3 PWM 140mm (4x)</a></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td><a href="https://www.bequiet.com/en/casefans/718">Be Quiet! Silent Wings 3 PWM 120mm (2x)</a></td>
+		</tr>
+		<tr>
+			<th>Chassi</th>
+			<td><a href="https://www.fractal-design.com/products/cases/define/define-c/black/#specifications">Fractal Design Define C</a></td>
+		</tr>
+		<tr>
+			<th>Uninterruptible Power Supply</th>
+			<td><a href="https://powerwalker.com/?page=product%26item=10121068">PowerWalker Basic VI 1000 SB 600W 1000VA</a></td>
+		</tr>
+		<tr>
+			<th>Network Interface Card</th>
+			<td><a href="https://store.mellanox.com/products/mellanox-mcx4121a-xcat-connectx-4-lx-en-network-interface-card-10gbe-dual-port-sfp28-pcie3-0-x8-rohs-r6.html">Mellanox ConnectX-4 MCX4121A-XCAT</a></td>
+		</tr>
+		<tr>
+			<th>Network Router</th>
+			<td><a href="https://www.ui.com/edgemax/edgerouter-4/">Ubiquiti Networks EdgeRouter 4</a></td>
+		</tr>
+		<tr>
+			<th>Broadband Speed</th>
+			<td>1 Gbit/s</td>
+		</tr>
+		<tr>
+			<th>Internet Service Provider</th>
+			<td>Bahnhof AB</td>
+		</tr>
+		<tr>
+			<th>Location</th>
+			<td>Sweden</td>
+		</tr>
+		<tr>
+			<th>Backup Node</th>
+			<td><a href="https://rockpi.org/rockpi4">Rock Pi 4B 4GB</a>, <a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>, <a href="https://www.ui.com/edgemax/edgerouter-x/">EdgeRouter X</a> (at a secondary location, not yet automated)</td>
+		</tr>
+	</table>
 </div>
 <h2>Software</h2>
 <div>
-	<span>
-		<table>
-			<tr>
-				<th>Operating System</th>
-				<td>Windows 10 Hyper-V (Ubuntu 18.04 LTS)</td>
-			</tr>
-			<tr>
-				<th>Jörmungandr Version</th>
-				<td>0.8.9-stable-alpha6</td>
-			</tr>
-			<tr>
-				<th>Node Manager</th>
-				<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.2.2</a> (5 nodes)</td>
-			</tr>
-		</table>
-	</span>
+	<table>
+		<tr>
+			<th>Operating System</th>
+			<td>Windows 10 Hyper-V (Ubuntu 18.04 LTS)</td>
+		</tr>
+		<tr>
+			<th>Jörmungandr Version</th>
+			<td>0.8.9-stable-alpha6</td>
+		</tr>
+		<tr>
+			<th>Node Manager</th>
+			<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.2.2</a> (5 nodes)</td>
+		</tr>
+	</table>
 </div>
 <h2>Statistics</h2>
 <div>
-	<span>
-		<table id="statistics-table">
-			<tr>
-				<th>Epoch 75</th>
-				<td>4/4 blocks! シ</td>
-			</tr>
-			<tr>
-				<th>Epoch 74</th>
-				<td>4/4 blocks! シ<br>Competetive: W-1, L-0</td>
-			</tr>
-			<tr>
-				<th>Epoch 73</th>
-				<td>1/1 block! シ
-			</tr>
-			<tr>
-				<th>Epoch 72</th>
-				<td>1/1 block! シ</td>
-			</tr>
-			<tr>
-				<th>Epoch 71</th>
-				<td>0/0 blocks</td>
-			</tr>
-
-			<tr>
-				<th>Epoch 70</h2></th>
-				<td>1/1 block! シ</h2></td>
-			</tr>
-			<tr>
-				<th>Epoch 69</th>
-				<td>0/0 blocks</td>
-			</tr>
-			<tr>
-				<th>Epoch 68</th>
-				<td>0/0 blocks</td>
-			</tr>
-			<tr>
-				<th>Epoch 67</th>
-				<td>1/1 block! シ</td>
-			</tr>
-			<tr>
-				<th>Epoch 66</th>
-				<td>0/0 blocks</td>
-			</tr>
-		</table>
-	</span>
+	<table id="statistics-table">
+		<tr>
+			<th>Epoch 75</th>
+			<td>4/4 blocks! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 74</th>
+			<td>4/4 blocks! シ<br>Competetive: W-1, L-0</td>
+		</tr>
+		<tr>
+			<th>Epoch 73</th>
+			<td>1/1 block! シ
+		</tr>
+		<tr>
+			<th>Epoch 72</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 71</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 70</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 69</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 68</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
+			<th>Epoch 67</th>
+			<td>1/1 block! シ</td>
+		</tr>
+		<tr>
+			<th>Epoch 66</th>
+			<td>0/0 blocks</td>
+		</tr>
+	</table>
 </div>
 <h2><a href="https://github.com/Kaze-Stake/kaze-stake.github.io/commits/master">History</a></h2>
 </body>
