--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ td {
 		</tr>
 		<tr>
 			<th>Backup Node</th>
-			<td><a href="https://rockpi.org/rockpi4">Rock Pi 4B 4GB</a>, <a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>, <a href="https://www.ui.com/edgemax/edgerouter-x/">EdgeRouter X</a> (at a secondary location, not yet automated)</td>
+			<td><a href="https://rockpi.org/rockpi4">Radxa Rock Pi 4B 4GB</a>,<br><a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>,<br><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a>,<br>At a secondary location, not yet automated.</td>
 		</tr>
 	</table>
 </div>
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 76</th>
-			<td>Scheduled for 4 blocks.</td>
+			<td>Scheduled for 4 blocks.<br>Update: 1/1 block so far! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 75</th>
