--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 76</th>
-			<td>Scheduled for 4 blocks.<br>Update: 1/1 block so far! シ</td>
+			<td>Scheduled for 4 blocks.</td>
 		</tr>
 		<tr>
 			<th>Epoch 75</th>
