--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 77</th>
+			<td>Scheduled for 4 blocks.</td>
+		<tr>
 			<th>Epoch 76</th>
 			<td>4/4 blocks! シ</td>
 		</tr>
