--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 77</th>
-			<td>Scheduled for 4 blocks.</td>
+			<td>4/4 blocks! シ</td>
 		<tr>
 			<th>Epoch 76</th>
 			<td>4/4 blocks! シ</td>
