--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ td {
 		</tr>
 		<tr>
 			<th>Power Supply</th>
-			<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
+8			<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
 		</tr>
 		<tr>
 			<th>Air Cooling</th>
@@ -134,6 +134,9 @@ td {
 <h2>Statistics</h2>
 <div>
 	<table id="statistics-table">
+		<tr>
+			<th>Epoch 78</th>
+			<td>Scheduled for 2 blocks.</td>
 		<tr>
 			<th>Epoch 77</th>
 			<td>4/4 blocks! シ</td>
