--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 79</th>
+			<td>TBA</td>
+		</tr>
+		<tr>
 			<th>Epoch 78</th>
-			<td>Scheduled for 2 blocks.</td>
+			<td>2/2 blocks! シ</td>
 		<tr>
 			<th>Epoch 77</th>
 			<td>4/4 blocks! シ</td>
