Epoch 79: Scheduled for 6 blocks.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 79</th>
-			<td>TBA</td>
+			<td>Sceduled for 6 blocks.</td>
 		</tr>
 		<tr>
 			<th>Epoch 78</th>
