--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ td {
 		</tr>
 		<tr>
 			<th>Processor</th>
-			<td><a href="https://ark.intel.com/content/www/us/en/ark/products/186604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6 GHz (8-Cores OC @ 4.7 GHz)</a></td>
+			<td><a href="https://ark.intel.com/content/www/us/en/ark/products/1
+86604/intel-core-i7-9700k-processor-12m-cache-up-to-4-90-ghz.html">Intel Core i7-9700K 8-Cores 3.6 GHz (8-Cores OC @ 4.7 GHz)</a></td>
 		</tr>
 		<tr>
 			<th>Memory</th>
@@ -66,7 +67,7 @@ td {
 		</tr>
 		<tr>
 			<th>Power Supply</th>
-8			<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
+			<td><a href="https://www.bequiet.com/en/powersupply/611#technische-daten">Be Quiet! Dark Power Pro 11 550W</a></td>
 		</tr>
 		<tr>
 			<th>Air Cooling</th>
