Epoch 79: 5/6 blocks.. Competetive: W-1, L-1

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 79</th>
-			<td>Sceduled for 6 blocks.</td>
+			<td>5/6 blocks<br>Competetive: W-1, L-1</td>
 		</tr>
 		<tr>
 			<th>Epoch 78</th>
