Epoch 80: Scheduled for 6 blocks.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 80</th>
+			<td>Scheduled for 6 blocks.</td>
+		</tr
+		<tr>
 			<th>Epoch 79</th>
 			<td>5/6 blocks<br>Competetive: W-1, L-1</td>
 		</tr>
