Epoch 81: Scheduled for 8 blocks.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 81</th>
+			<td>Scheduled for 8 blocks.</td>
+		</tr>
+		<tr>
 			<th>Epoch 80</th>
 			<td>5/6 blocks<br>Competetive: W-0, L-1</td>
 		</tr>
