Added AdaPools and PoolTool.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@ td {
 			<th>Epoch 66</th>
 			<td>0/0 blocks</td>
 		</tr>
+		<tr>
+			<th><a style="font-weight: normal;" href="https://adapools.org/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">AdaPools</a></th>
+			<td><a href="https://pooltool.io/pool/d392c42dcfe2e1c16429c525c84b708828d7bd7c689ad84fc4244778e43380bc">PoolTool</a></td>
+		</tr>
 	</table>
 </div>
 <h2><a href="https://github.com/Kaze-Stake/kaze-stake.github.io/commits/master">History</a></h2>
