--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 81</th>
-			<td>Scheduled for 9 blocks.</td>
+			<td>9/9 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 80</th>
