--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ td {
 		</tr>
 		<tr>
 			<th>Backup Node</th>
-			<td><a href="https://rockpi.org/rockpi4">Radxa Rock Pi 4B 4GB</a>,<br><a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>,<br><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a>,<br>Automated failover</td>
+			<td><a href="https://rockpi.org/rockpi4">Radxa Rock Pi 4B 4GB</a>,<br><a href="https://www.fotolog.cl/lenovo-sl700-ngff-m-2-2242-240g-ssd-sata3-up-to-540mb-s-read-speed/">Lenovo SL700 NVMe M.2 SSD 240GB</a>,<br><a href="https://www.ui.com/edgemax/edgerouter-x/">Ubiquiti Networks EdgeRouter X</a>,<br>Automated failover<br>Secondary location</td>
 		</tr>
 	</table>
 </div>
