Epoch 82: Scheduled for 2 blocks.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 82</th>
+			<td>Scheduled for 2 blocks.</td>
+		</tr>
+		<tr>
 			<th>Epoch 81</th>
 			<td>9/9 blocks! シ</td>
 		</tr>
