Updated Operating System details

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ td {
 	<table>
 		<tr>
 			<th>Operating System</th>
-			<td>Windows 10 Hyper-V (Ubuntu 18.04 LTS)</td>
+			<td>Windows 10 Pro N Hyper-V (Ubuntu 18.04 LTS)</td>
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
