--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 82</th>
-			<td>Scheduled for 2 blocks.</td>
+			<td>0/2 blocks<br>Competetive: W-0, L-2<br>(╯°□°)╯︵ ┻━┻</td>
 		</tr>
 		<tr>
 			<th>Epoch 81</th>
