Epoch 83: Scheduled for 4 blocks.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 83</th>
+			<td>Scheduled for 4 blocks.</td>
+		</tr>
+		<tr>
 			<th>Epoch 82</th>
 			<td>0/2 blocks<br>Competetive: W-0, L-2<br>(╯°□°)╯︵ ┻━┻</td>
 		</tr>
