--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 82</th>
-			<td>0/2 blocks<br>Competetive: W-0, L-2<br>(╯°□°)╯︵ ┻━┻</td>
+			<td>0/2 blocks (╯°□°)╯︵ ┻━┻<br>Competetive: W-0, L-2</td>
 		</tr>
 		<tr>
 			<th>Epoch 81</th>
