--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
-			<th>Epoch 83</th>
+			<th>Epoch 84</th>
 			<td>Scheduled for 4 blocks.</td>
+		</tr>
+		<tr>
+			<th>Epoch 83</th>
+			<td>4/4 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 82</th>
