Epoch 85: 5/5 blocks! Epoch 86: Scheduled for 2 blocks.

--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 86</th>
+			<td>Scheduled for 2 blocks.</td>
+		</tr>
+		<tr>
 			<th>Epoch 85</th>
-			<td>Scheduled for 5 blocks.</td>
+			<td>5/5 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 84</th>
