Epoch 86: 2/2 blocks! Epoch 87: Scheduled for 5 blocks. Also updated software versions.

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.13</td>
+			<td>0.8.9-stable-alpha-6</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
-			<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.2.7</a> (5 nodes)</td>
+			<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.2.8</a> (5 nodes)</td>
 		</tr>
 	</table>
 </div>
@@ -135,8 +135,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 87</th>
+			<td>Scheduled for 5 blocks.</td>
+		</tr>
+		<tr>
 			<th>Epoch 86</th>
-			<td>Scheduled for 2 blocks.</td>
+			<td>2/2 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 85</th>
