Epoch 87: 5/5 blocks! Epoch 87: Scheduled for 5 blocks. Also updated software versions.

--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
-			<th>Epoch 87</th>
+			<th>Epoch 88</th>
 			<td>Scheduled for 5 blocks.</td>
+		</tr>
+		<tr>
+			<th>Epoch 87</th>
+			<td>5/5 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 86</th>
