--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 82</th>
-			<td>0/2 blocks (╯°□°)╯︵ ┻━┻<br>Competetive: W-0, L-2</td>
+			<td>0/2 blocks (╯°□°)╯︵ ┻━┻<br>Competitive: W-0, L-2</td>
 		</tr>
 		<tr>
 			<th>Epoch 81</th>
@@ -168,11 +168,11 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 80</th>
-			<td>5/6 blocks<br>Competetive: W-0, L-1</td>
+			<td>5/6 blocks<br>Competitive: W-0, L-1</td>
 		</tr>
 		<tr>
 			<th>Epoch 79</th>
-			<td>5/6 blocks<br>Competetive: W-1, L-1</td>
+			<td>5/6 blocks<br>Competitive: W-1, L-1</td>
 		</tr>
 		<tr>
 			<th>Epoch 78</th>
@@ -191,7 +191,7 @@ td {
 		</tr>
 		<tr>
 			<th>Epoch 74</th>
-			<td>4/4 blocks! シ<br>Competetive: W-1, L-0</td>
+			<td>4/4 blocks! シ<br>Competitive: W-1, L-0</td>
 		</tr>
 		<tr>
 			<th>Epoch 73</th>
