Epoch 88: 4/5 blocks.. (See error report for explanation and refund). Updated Jörmungandr version to 0.8.13. Changed settings in JorManager. Currently monitoring the situation.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.9-stable-alpha-6</td>
+			<td>0.8.13</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 88</th>
-			<td>Scheduled for 5 blocks.</td>
+			<td><a href="https://www.youtube.com/watch?v=MIZbGSXeWWE">4/5</a> blocks<br><a href="https://kaze-stake.github.io/error_report_epoch_88.txt">Error report</a></td>
 		</tr>
 		<tr>
 			<th>Epoch 87</th>
