Clarify to delegators that refund is available.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 88</th>
-			<td><a href="https://www.youtube.com/watch?v=MIZbGSXeWWE">4/5</a> blocks<br><a href="https://kaze-stake.github.io/error_report_epoch_88.txt">Error report</a></td>
+			<td><a href="https://www.youtube.com/watch?v=MIZbGSXeWWE">4/5</a> blocks<br><a href="https://kaze-stake.github.io/error_report_epoch_88.txt">Error report &amp; refund</a></td>
 		</tr>
 		<tr>
 			<th>Epoch 87</th>
