--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.13</td>
+			<td>0.8.13 (built from source 2020-03-11)</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 88</th>
-			<td><a href="https://www.youtube.com/watch?v=MIZbGSXeWWE">4/5</a> blocks<br><a href="https://kaze-stake.github.io/error_report_epoch_88.txt">Error report &amp; refund</a></td>
+			<td><a href="https://www.youtube.com/watch?v=MIZbGSXeWWE">4/5 blocks</a><br><a href="https://kaze-stake.github.io/error_report_epoch_88.txt">Error report &amp; refund</a></td>
 		</tr>
 		<tr>
 			<th>Epoch 87</th>
