Epoch 89: 5/5 blocks! Epoch 90: 0/0 blocks

--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 90</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 89</th>
-			<td>Scheduled for 5 blocks.</td>
+			<td>5/5 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 88</th>
