Epoch 91: 1/1 block! Updated Jörmungandr version

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.14</td>
+			<td>0.8.14-jmgr-alpha2</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
@@ -136,7 +136,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 91</th>
-			<td>Scheduled for 1 block.</td>
+			<td>1/1 block! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 90</th>
