Apparently they sent me the 25GbE version instead of the 10GbE NIC I thought that I ordered.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ td {
 		</tr>
 		<tr>
 			<th>Network Interface Card</th>
-			<td><a href="https://store.mellanox.com/products/mellanox-mcx4121a-xcat-connectx-4-lx-en-network-interface-card-10gbe-dual-port-sfp28-pcie3-0-x8-rohs-r6.html">Mellanox ConnectX-4 MCX4121A-XCAT</a></td>
+			<td><a href="https://store.mellanox.com/products/mellanox-mcx4121a-acat-connectx-4-lx-en-network-interface-card-25gbe-dual-port-sfp28-pcie3-0-x8-rohs-r6.html">Mellanox ConnectX-4 MCX4121A-ACAT</a></td>
 		</tr>
 		<tr>
 			<th>Network Router</th>
