--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@ td {
 </div>
 <h2>Statistics</h2>
 <div>
-	<table id="statistics-table">
+	<table id="statistics-table">¨
+		<tr>
+			<th>Epoch 92</th>
+			<td>0/0 blocks</td>
+		</tr>
 		<tr>
 			<th>Epoch 91</th>
 			<td>1/1 block! シ</td>
