--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ td {
 <div>
 	<table id="statistics-table">¨
 		<tr>
+			<th>Epoch 93</th>
+			<td>Scheduled for 2 blocks.</td>
+		</tr>
+		<tr>
 			<th>Epoch 92</th>
 			<td>0/0 blocks</td>
 		</tr>
