--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.14-jmgr-alpha2</td>
+			<td>0.8.9-stable-alpha-6</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
