--- a/index.html
+++ b/index.html
@@ -123,11 +123,15 @@ td {
 		</tr>
 		<tr>
 			<th>Jörmungandr Version</th>
-			<td>0.8.9-stable-alpha-6</td>
+			<td>0.8.14-stable-alpha-2</td>
 		</tr>
 		<tr>
 			<th>Node Manager</th>
 			<td><a href="https://bitbucket.org/muamw10/jormanager/src/develop/">JorManager 0.2.9</a> (4 nodes)</td>
+		</tr>
+		<tr>
+			<th>0.8.14 Memory Leaks</th>
+			<td>Script restarts leaking nodes</td>
 		</tr>
 	</table>
 </div>
