--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ td {
 </div>
 <h2>Statistics</h2>
 <div>
-	<table id="statistics-table">¨
+	<table id="statistics-table">
 		<tr>
 			<th>Epoch 93</th>
 			<td>Scheduled for 2 blocks.</td>
