Epoch 93: 2/2 blocks! Epoch 94: Scheduled for 1 block.

--- a/index.html
+++ b/index.html
@@ -139,8 +139,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 94</th>
+			<td>Scheduled for 1 block.</td>
+		</tr>
+		<tr>
 			<th>Epoch 93</th>
-			<td>Scheduled for 2 blocks.</td>
+			<td>2/2 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 92</th>
