Epoch 94: 1/1 block! Epoch 95: 0/0 blocks

--- a/index.html
+++ b/index.html
@@ -139,8 +139,12 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 95</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 94</th>
-			<td>Scheduled for 1 block.</td>
+			<td>1/1 block! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 93</th>
