--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 98</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 97</th>
 			<td>0/0 blocks</td>
 		</tr>
