--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@ td {
 <div>
 	<table id="statistics-table">
 		<tr>
+			<th>Epoch 102</th>
+			<td>Scheduled for 3 blocks.</td>
+		</tr>
+		<tr>
+			<th>Epoch 101</th>
+			<td>0/0 blocks</td>
+		</tr>
+		<tr>
 			<th>Epoch 100</th>
 			<td>0/1 block<br>I've been renting out spare CPU and GPU time to Rosetta@home and Folding@home to help develop a vaccine for COVID-19. Block was missed by 1 second, so apparently Rosetta@home does not have a well working interrupt timer. Turned it off for now, will move it to a separate virtual server with lower CPU priority than Jörmungandr.</td>
 		</tr>
