--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ td {
 	<table id="statistics-table">
 		<tr>
 			<th>Epoch 102</th>
-			<td>Scheduled for 3 blocks.</td>
+			<td>3/3 blocks! シ</td>
 		</tr>
 		<tr>
 			<th>Epoch 101</th>
